--- a/app/views/project_users/new.html.erb
+++ b/app/views/project_users/new.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "modal" do %>
   <div class="modal-member">
-    <h1 class="modal-header mb-3 justify-content-center"><%= t(".title") %></h1>
+    <h1 class="modal-header mb-4 justify-content-center fw-bold"><%= t(".title") %></h1>
     <% content_for :submit do %>
       <% t(".submit") %>
     <% end %>
