--- a/app/views/release_plans/_release_plan_detail.html.erb
+++ b/app/views/release_plans/_release_plan_detail.html.erb
@@ -7,27 +7,27 @@
             <table class="table table-striped table-product">
               <tbody>
                 <tr>
-                  <td width="250"><%= t ".project_name" %></td>
+                  <td width="250" class="fw-bold"><%= t ".project_name" %></td>
                   <td><%= @release_plan.project_name %></td>
                 </tr>
                 <tr>
-                  <td><%= t ".creator" %></td>
+                  <td class="fw-bold"><%= t ".creator" %></td>
                   <td><%= @release_plan.creator_name %></td>
                 </tr>
                 <tr>
-                  <td><%= t ".email" %></td>
+                  <td class="fw-bold"><%= t ".email" %></td>
                   <td><%= @release_plan.creator_email %></td>
                 </tr>
                 <tr>
-                  <td><%= t ".date" %></td>
+                  <td class="fw-bold"><%= t ".date" %></td>
                   <td><%= format_date @release_plan.release_date %></td>
                 </tr>
                 <tr>
-                  <td><%= t ".description" %></td>
+                  <td class="fw-bold"><%= t ".description" %></td>
                   <td><%= @release_plan.description %></td>
                 </tr>
                 <tr>
-                  <td><%= t ".status" %></td>
+                  <td class="fw-bold"><%= t ".status" %></td>
                   <td><%= t "release_plans.is_released.#{@release_plan.is_released}" %></td>
                 </tr>
               </tbody>
