--- a/app/views/release_plans/show.html.erb
+++ b/app/views/release_plans/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container w-50 d-flex justify-content-center">
   <%= turbo_frame_tag "modal" do %>
     <div class="modal-member">
-      <h1 class="mb-3 text-center"><%= @release_plan.project_name %></h1>
+      <h1 class="mb-3 text-center fw-bold"><%= @release_plan.project_name %></h1>
         <%= render "release_plan_detail" %>
       <div class="d-flex justify-content-center align-items-center">
         <%= link_to t(".close"), "#", class: "btn btn-danger btn-md w-50 ", data: {
