--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,8 +7,9 @@
         <th width="5%"><%= t ".stt" %></th>
         <th scope="col"><%= t ".project_name" %></th>
         <th scope="col"><%= t ".day_report" %></th>
-        <th scope="col"><%= t ".issue" %></th>
         <th scope="col"><%= t ".description" %></th>
+        <th scope="col"><%= t ".resource_description" %></th>
+        <th scope="col"><%= t ".issue" %></th>
         <th scope="col"><%= t ".action" %></th>
       </tr>
     </thead>
