Task: thêm filter cho report + project

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1710,8 +1710,8 @@
                 />
               </div>
               <div class="flex-grow-1 ms-3">
-                <h4 class="mb-0">Ellie Tucker</h4>
-                <p class="card-text">ellie.tucker@dashly.com</p>
+                <h4 class="mb-0"><%= current_user.name %></h4>
+                <p class="card-text"><%= current_user.email %></p>
               </div>
             </div>
           </div>
