--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,6 +9,7 @@
         <th scope="col"><%= t ".name" %></th>
         <th scope="col"><%= t ".description" %></th>
         <th scope="col"><%= t ".status" %></th>
+        <th scope="col"><%= t ".created_at" %></th>
         <th scope="col"><%= t ".start_date" %></th>
         <th scope="col"><%= t ".end_date" %></th>
         <th scope="col"><%= t ".action" %></th>
