--- a/app/views/projects/_search_form.html.erb
+++ b/app/views/projects/_search_form.html.erb
@@ -1,5 +1,13 @@
 <%= form_with url: projects_path, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto">
+    <%= f.label :start_date,  t(".start_date"), class: "form-label" %>
+    <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
+  </div>
+  <div class="col-auto">
+    <%= f.label :end_date,  t(".end_date"), class: "form-label" %>
+    <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
+  </div>
+  <div class="col-auto">
     <%= f.label :name,  t(".name"), class: "form-label" %>
     <%= f.text_field :name, value: params[:name], class: "form-control" %>
   </div>
