--- a/app/views/reports/_search_form.html.erb
+++ b/app/views/reports/_search_form.html.erb
@@ -1,7 +1,11 @@
 <%= form_with url: reports_path, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto">
-    <%= f.label :date,  t(".date_report"), class: "form-label" %>
-    <%= f.date_field :date, value: params[:date], class: "form-control" %>
+    <%= f.label :start_date,  t(".start_date_report"), class: "form-label" %>
+    <%= f.date_field :start_date, value: params[:start_date], class: "form-control" %>
+  </div>
+  <div class="col-auto">
+    <%= f.label :end_date,  t(".end_date_report"), class: "form-label" %>
+    <%= f.date_field :end_date, value: params[:end_date], class: "form-control" %>
   </div>
   <div class="col-auto">
     <%= f.label :name,  t(".name"), class: "form-label" %>
