--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -71,7 +71,7 @@
         <li class="nav-item offset-1 mb-2">
           <div class="d-flex align-items-center">
             <i class="bi bi-coin text-white me-1"></i>
-            <%= link_to t(".list_values"), project_features_path, class: "nav-link" %>
+            <%= link_to t(".list_values"), project_features_path(month_year: month_field_value(params[:month_year])), class: "nav-link" %>
           </div>
         </li>
 
