--- a/app/views/project_features/_monthly_project_feature.html.erb
+++ b/app/views/project_features/_monthly_project_feature.html.erb
@@ -1,12 +1,12 @@
-<tr>
-  <td><%= sequence_number item_counter, @pagy&.offset  %></td>
-  <td><%= item.name %></td>
-  <td><%= item.calculate_project_man_per_month(params[:month_year]) %></td>
-
-  <td class="text-center">
-    <%= link_to project_month_project_features_path(item, month_year: params[:month_year]),
-                class: "btn btn-primary btn-sm" do %>
-      <i class="bi-eye-fill"></i>
-    <% end %>
-  </td>
-</tr>
+  <tr>
+    <td><%= sequence_number item_counter, @pagy&.offset  %></td>
+    <td><%= item.project_name %></td>
+    <td><%= man_month_per_project_month_year item.project_id, item.month, item.year %></td>
+    <td><%= "#{item.year}-#{format('%02d', item.month)}" %></td>
+    <td class="text-center">
+      <%= link_to project_month_project_features_path(project_id: item.project_id, month_year: "#{item.year}-#{format('%02d', item.month)}"),
+                  class: "btn btn-primary btn-sm" do %>
+        <i class="bi-eye-fill"></i>
+      <% end %>
+    </td>
+  </tr>
