Fix screen resources

--- a/app/views/resources/_table.html.erb
+++ b/app/views/resources/_table.html.erb
@@ -3,10 +3,12 @@
     <thead>
       <tr>
         <th width="5%"><%= t(".order")%></th>
+        <th scope="col"><%= t(".month")%></th>
+        <th scope="col"><%= t(".year")%></th>
         <th scope="col"><%= t(".project_name")%></th>
         <th scope="col"><%= t(".man_month")%></th>
         <th scope="col"><%= t(".detail")%></th>
-        <th scope="col"><%= t(".date")%></th>
+        <th scope="col"><%= t(".date_created")%></th>
       </tr>
     </thead>
     <tbody class="list">
