fix_screen_release

--- a/app/views/release_plans/new.html.erb
+++ b/app/views/release_plans/new.html.erb
@@ -16,10 +16,18 @@
       <%= f.text_area :description, class: "form-control #{invalid(@release_plan, :description)}", rows: "3" %>
       <p class="error"><%= show_errors(@release_plan, :description) %></p>
     </div>
-    <div class="form-outline mb-4">
+    <div class="form-outline mb-4" >
       <%= f.label t(".status"), class: "form-label required" %>
-      <%= f.select :is_released, list_status, {}, class: "form-select #{invalid(@release_plan, :is_released)}" %>
+      <%= f.select :is_released, list_status, {}, class: "form-select #{invalid(@release_plan, :is_released)}", data: {
+          controller: "is_released_select",
+          action: "is_released_select#change"
+      } %>
       <p class="error"><%= show_errors(@release_plan, :is_released) %></p>
+    </div>
+    <div class="form-outline mb-4" id="released_at-select_date-field">
+      <%= f.label t(".released_at"), class: "form-label" %>
+      <%= f.date_field :released_at, class: "form-control #{invalid(@release_plan, :released_at)}" %>
+      <p class="error"><%= show_errors(@release_plan, :released_at) %></p>
     </div>
     <div class="col-6 mx-auto">
       <%= f.submit t(".submit"), class: "btn btn-primary btn-block mt-3 w-100" %>
