--- a/app/views/health_items/index.html.erb
+++ b/app/views/health_items/index.html.erb
@@ -10,7 +10,7 @@
       <th scope="col"><%= t ".action" %></th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="health-items">
     <%= render @health_items %>
     </tbody>
   </table>
