--- a/app/views/health_items/_search_form.html.erb
+++ b/app/views/health_items/_search_form.html.erb
@@ -16,6 +16,6 @@
 
   <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
-    <%= link_to t(".new_project"), "#", class: "btn btn-primary form-control" %>
+    <%= link_to t(".new_project"), new_health_item_path, data: {turbo_frame: "modal"}, class: "btn btn-primary form-control" %>
   </div>
 <% end %>
