--- a/app/views/project_features/index.html.erb
+++ b/app/views/project_features/index.html.erb
@@ -1,4 +1,9 @@
 <% provide :title, t("month_project_features.index.project_feature_index") %>
+
+<% content_for :javascript_file do %>
+  <%= javascript_include_tag "animate" %>
+<% end %>
+
 <%= form_with url: project_features_path, method: :get do |f| %>
   <div class="row mb-4">
     <div class="col-auto">
