--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr class="table_row hide">
   <td><%= sequence_number project_counter, @pagy&.offset %></td>
   <td><%= project.group_name %></td>
   <td><%= project.name %></td>
