--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr class="table_row hide">
   <td><%= sequence_number report_counter, @pagy.offset %></td>
   <td id="report-<%= report.id %>-project-name"><%= report.project_name %></td>
   <td id="report-<%= report.id %>-date"><%= format_date report.date %></td>
