--- a/app/views/value_resources/_value_resource.html.erb
+++ b/app/views/value_resources/_value_resource.html.erb
@@ -1,5 +1,7 @@
-<tr>
-  <td><span><%= project.name %></span></td>
+<tr class="table_row hide">
+  <td>
+    <span><%= project.name %></span>
+  </td>
   <%= value_resources_project_html project,
                                    start_month_field_value(params[:start_month_year]),
                                    month_field_value(params[:end_month_year]) %>
