--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,79 +6,80 @@
     <div class="container-fluid">
       <!-- Brand -->
       <%= link_to t("application.project_management"), root_path, class: "navbar-brand
-      text-center" %>
+      text-center fw-bold" %>
       <!-- Navbar toggler -->
       <ul class="navbar-nav">
-        <li class="nav-item offset-1 mb-2">
+
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(projects_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-box text-white me-1"></i>
-            <%= link_to t(".list_projects"), projects_path, class: "nav-link" %>
+            <%= link_to t(".list_projects"), projects_path, class: "nav-link fw-bold" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd">
           <div class="d-flex align-items-center">
             <i class="bi bi-balloon-heart text-white me-1"></i>
             <a
-              class="nav-link"
+              class="nav-link fw-bold"
               href="#healthCollapse"
               data-bs-toggle="collapse"
               role="button"
               aria-expanded="false"
             >
-              <span class=""><%= t(".list_health") %></span>
+              <span class="me-2"><%= t(".list_health") %></span>
             </a>
           </div>
         </li>
 
-        <li class="nav-item offset-2 mb-2 show collapse" id="healthCollapse">
+        <li class="nav-item offset-1 mb-2 show collapse pd <%= active_class_for_url(new_health_path) %>" id="healthCollapse">
           <div class="d-flex align-items-center">
             <i class="bi bi-pencil text-white me-1"></i>
-            <%= link_to t(".list_new_health"), new_health_path, class: "nav-link" %>
+            <%= link_to t(".list_new_health"), new_health_path, class: "nav-link fw-bold" %>
           </div>
         </li>
 
         <% if current_user.can_modify_health_item? %>
-          <li class="nav-item offset-2 mb-2 show collapse" id="healthCollapse">
+          <li class="nav-item offset-1 mb-2 show collapse menu-item pd <%= active_class_for_url(health_items_path) %>" id="healthCollapse">
             <div class="d-flex align-items-center">
               <i class="bi bi-bookmark-heart text-white me-1"></i>
-              <%= link_to t(".list_health_items"), health_items_path, class: "nav-link" %>
+              <%= link_to t(".list_health_items"), health_items_path, class: "nav-link fw-bold" %>
             </div>
           </li>
         <% end %>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(reports_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-file-text text-white me-1"></i>
-            <%= link_to t(".list_reports"), reports_path, class: "nav-link" %>
+            <%= link_to t(".list_reports"), reports_path, class: "nav-link fw-bold" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(resources_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-briefcase text-white me-1"></i>
-            <%= link_to t(".list_resources"), resources_path, class: "nav-link" %>
+            <%= link_to t(".list_resources"), resources_path, class: "nav-link fw-bold" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(release_plans_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-calendar text-white me-1"></i>
-            <%= link_to t(".list_release_plans"), release_plans_path, class: "nav-link" %>
+            <%= link_to t(".list_release_plans"), release_plans_path, class: "nav-link fw-bold" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(project_features_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-coin text-white me-1"></i>
-            <%= link_to t(".list_values"), project_features_path(month_year: month_field_value(params[:month_year])), class: "nav-link" %>
+            <%= link_to t(".list_values"), project_features_path(month_year: month_field_value(params[:month_year])), class: "nav-link fw-bold" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1 mb-2">
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(value_resources_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-bar-chart text-white me-1"></i>
-            <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link" %>
+            <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link fw-bold" %>
           </div>
         </li>
       </ul>
