--- a/app/views/project_features/_monthly_project_feature.html.erb
+++ b/app/views/project_features/_monthly_project_feature.html.erb
@@ -1,4 +1,4 @@
-  <tr>
+  <tr class="table_row hide">
     <td><%= sequence_number item_counter, @pagy&.offset  %></td>
     <td><%= item.project_name %></td>
     <td><%= man_month_per_project_month_year item.project_id, item.month, item.year %></td>
