--- a/app/views/release_plans/_release_plan.html.erb
+++ b/app/views/release_plans/_release_plan.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr class="table_row hide">
   <td><%= sequence_number release_plan_counter, @pagy.offset %></td>
   <td><%= release_plan.project_name %></td>
   <td><%= format_date release_plan.release_date %></td>
