--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,4 +1,9 @@
 <% provide :title, t(".resource_index") %>
+
+<% content_for :javascript_file do %>
+  <%= javascript_include_tag "animate" %>
+<% end %>
+
 <%= render("resources/search") %>
 <div class="row py-3">
   <div class="col">
