--- a/app/views/value_resources/index.html.erb
+++ b/app/views/value_resources/index.html.erb
@@ -1,4 +1,9 @@
 <% provide :title, t(".value_resources_index") %>
+
+<% content_for :javascript_file do %>
+  <%= javascript_include_tag "animate" %>
+<% end %>
+
 <%= render "value_resources/search" %>
 <div class="card-footer">
   <% if @pagy.pages > 1 %>
