--- a/app/views/health/new.html.erb
+++ b/app/views/health/new.html.erb
@@ -8,7 +8,7 @@
           <h3><%= t("resources.new.select_project")%></h3>
         </div>
         <div class="col-6">
-          <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, class: "form-select" %>
+          <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, class: "form-select", required: true %>
         </div>
       </div>
 
@@ -20,7 +20,7 @@
             <%= item.item %>
           </div>
           <div class="col-6">
-            <%= f.select "health_items[#{item.id}]", status_options, {:prompt => t("project.form.select_status")}, class: "form-select", required: true %>
+            <%= f.select "health_items[#{item.id}]", status_options, {:prompt => t("project.form.select_status"), selected: "defau_value"}, class: "form-select", required: true %>
           </div>
         </div>
       <% end %>
