--- a/app/views/release_plans/index.html.erb
+++ b/app/views/release_plans/index.html.erb
@@ -12,6 +12,7 @@
         <th width="5%"><%= t ".stt" %></th>
         <th scope="col"><%= t ".project_name" %></th>
         <th scope="col"><%= t ".day_release_plan" %></th>
+        <th scope="col"><%= t ".actual_release_date" %></th>
         <th scope="col"><%= t ".description" %></th>
         <th scope="col"><%= t ".status" %></th>
         <th scope="col"><%= t ".action" %></th>
