--- a/app/views/reports/_search_form.html.erb
+++ b/app/views/reports/_search_form.html.erb
@@ -25,6 +25,18 @@
       <i class="bi bi-arrow-counterclockwise"></i>
     <% end %>
   </div>
+  <div class="col-auto border-0 card-header-space-between d-flex align-items-end">
+    <div class="dropdown ms-4">
+      <a href="javascript: void(0);" class="dropdown-toggle no-arrow text-secondary" role="button"
+         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <h5><i class="bi bi-three-dots-vertical"></i></h5>
+      </a>
+      <div class="dropdown-menu">
+        <%= link_to t(".export"), reports_path(format: :xlsx, name: params[:name], status: params[:status],
+                                               start_date: params[:start_date], end_date: params[:end_date]), class: "dropdown-item" %>
+      </div>
+    </div>
+  </div>
   <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to t(".new_report"), new_report_path, class: "btn btn-primary form-control" %>
