--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -19,9 +19,7 @@
             <i class="bi bi-three-dots-vertical"></i>
           </a>
           <div class="dropdown-menu">
-            <a href="javascript: void(0);" class="dropdown-item">
-              <%= t(".export_report")%>
-            </a>
+            <%= link_to t(".export_report"), resources_path(format: :xlsx, name: params[:name], month_year: params[:month_year]), class: "dropdown-item" %>
             <a href="javascript: void(0);" class="dropdown-item">
               <%= t(".share")%>
             </a>
