--- a/app/views/health/new.html.erb
+++ b/app/views/health/new.html.erb
@@ -8,15 +8,16 @@
           <h3><%= t("resources.new.select_project")%></h3>
         </div>
         <div class="col-6">
-          <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, class: "form-select", required: true %>
+          <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, class: "form-select",
+                       disabled: params[:project_id].present?, required: true %>
         </div>
       </div>
 
-      <h3 class="mt-4 mb-6 font-weight-bold"><%= t(".check_list")%></h3>
+      <h3 class="mt-4 mb-6 font-weight-bold"><%= t(".checklist")%></h3>
 
       <% @health_items.each do |item| %>
         <div class="mb-3 row w-50">
-          <div class="col-6">
+          <div class="col-6 required">
             <%= item.item %>
           </div>
           <div class="col-6">
