statistics_release_plan

--- a/app/views/dashboard/_search.html.erb
+++ b/app/views/dashboard/_search.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: root_url, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto w-175px">
-    <%= f.label :name,  t("project.form.name"), class: "form-label" %>
-    <%= f.text_field :name, value: params[:name], class: "form-control" %>
+    <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
+    <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select"} %>
   </div>
   <div class="col-auto">
     <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
