--- a/app/views/release_plans/_search_form.html.erb
+++ b/app/views/release_plans/_search_form.html.erb
@@ -25,8 +25,12 @@
       <i class="bi bi-arrow-counterclockwise"></i>
     <% end %>
   </div>
-  <div class="col-auto ms-auto">
+  <div class="col-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to t(".new_release_plan"), new_release_plan_path, class: "btn btn-primary form-control" %>
+  </div>
+  <div class="col-auto ms-auto">
+    <label class="form-label invisible">invisible label</label>
+    <%= link_to t("breadcrumbs.statistical"), statistics_release_plans_path(year: Date.current.year), class: "btn btn-primary form-control" %>
   </div>
 <% end %>
