--- a/app/views/health/new.html.erb
+++ b/app/views/health/new.html.erb
@@ -8,7 +8,7 @@
           <h3><%= t("resources.new.select_project")%></h3>
         </div>
         <div class="col-6">
-          <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, class: "form-select",
+          <%= f.select :project_id, Project.without_health_items.pluck(:name, :id), { include_blank: true, selected: params[:project_id]}, class: "form-select",
                        disabled: params[:project_id].present?, required: true %>
         </div>
       </div>
