--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -45,6 +45,13 @@
           </div>
         </li>
 
+        <li class="nav-item offset-1 mb-2 show collapse pd <%= active_class_for_url(statistics_release_plans_path) %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".list_statistic_release"), statistics_release_plans_path(year: year_field_value(params[:year])), class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
         <li class="nav-item mb-2 menu-item pd">
           <div class="d-flex align-items-center">
             <i class="bi bi-balloon-heart text-white me-1"></i>
