--- a/app/views/projects/_search_form.html.erb
+++ b/app/views/projects/_search_form.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_field :name, value: params[:name], class: "form-control" %>
   </div>
   <div class="col-auto">
-    <%= f.label :group, t(".group"), class: "form-label" %>
-    <%= f.select :group, list_group, {include_blank: true, selected: params[:group]}, class: "form-select" %>
+    <%= f.label :group_id, t(".group"), class: "form-label" %>
+    <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, class: "form-select" %>
   </div>
   <div class="col-auto">
     <%= f.label :status, t(".status"), class: "form-label" %>
@@ -33,5 +33,17 @@
   <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to t(".new_project"), new_project_path, class: "btn btn-primary form-control" %>
+  </div>
+
+  <div class="col-auto">
+    <label class="form-label invisible">invisible label</label>
+    <%= link_to t("projects.index.export"),
+                projects_path(format: :xlsx,
+                                start_date: params[:start_date],
+                                end_date: params[:end_date],
+                                name: params[:name],
+                                group_id: params[:group_id],
+                                status: params[:status]),
+                class: "btn btn-secondary form-control" %>
   </div>
 <% end %>
