--- a/app/views/value_resources/_search.html.erb
+++ b/app/views/value_resources/_search.html.erb
@@ -1,47 +1,61 @@
-<%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4" do |f| %>
-  <div class="col-auto">
-    <%= f.label :name,  t("project.form.name"), class: "form-label" %>
-    <%= f.text_field :name, value: params[:name], class: "form-control" %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
-    <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
-  </div>
-  <div class="col-auto">
-    <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
-    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
-  </div>
+<%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
+  <div class="row g-4">
+    <div class="col-auto">
+      <%= f.label :name,  t("project.form.name"), class: "form-label" %>
+      <%= f.text_field :name, value: params[:name], class: "form-control" %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
+      <%= f.select :group_id, list_group, {include_blank: true, selected: params[:group_id]}, {class: "form-select"} %>
+    </div>
+    <div class="col-auto">
+      <%= f.label :status, t("projects.search_form.status"), class: "form-label" %>
+      <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, {class: "form-select"} %>
+    </div>
 
-  <div class="col-auto">
-    <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
-    <%= f.date_field :start_month_year, type: "month",
-                     value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
-  </div>
+    <div class="col-auto">
+      <%= f.label :start_month_year, t("dashboard.search.start_month"), class: "form-label" %>
+      <%= f.date_field :start_month_year, type: "month",
+                       value: start_month_field_value(params[:start_month_year]), class: "form-control" %>
+    </div>
 
-  <div class="col-auto">
-    <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
-    <%= f.date_field :end_month_year, type: "month",
-                     value: month_field_value(params[:end_month_year]), class: "form-control" %>
-  </div>
+    <div class="col-auto">
+      <%= f.label :end_month_year, t("dashboard.search.end_month"), class: "form-label" %>
+      <%= f.date_field :end_month_year, type: "month",
+                       value: month_field_value(params[:end_month_year]), class: "form-control" %>
+    </div>
 
-  <div class="col-auto w-150px">
-    <label class="form-label invisible">invisible label</label>
-    <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
-  </div>
-  <div class="col-auto w-100px m-0">
-    <label class="form-label invisible overflow-hidden m-0">invisible label</label>
-    <%= link_to value_resources_path, class: "btn btn-secondary form-control" do %>
-      <i class="bi bi-arrow-counterclockwise"></i>
-    <% end %>
-  </div>
+    <div class="col-auto w-150px">
+      <label class="form-label invisible">invisible</label>
+      <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control" %>
+    </div>
 
-  <div class="col-auto ms-auto">
-    <label class="form-label invisible">invisible label</label>
-    <%= link_to t("value_resources.index.export"),
-                value_resources_path(format: :xlsx, name: params[:name], group_id: params[:group_id],
-                                     status: params[:status],
-                                     start_month_year: params[:start_month_year],
-                                     end_month_year: params[:end_month_year]),
-                class: "btn btn-secondary form-control" %>
+    <div class="col-auto w-100px">
+      <label class="form-label invisible">invisible</label>
+      <%= link_to value_resources_path, class: "btn btn-secondary form-control" do %>
+        <i class="bi bi-arrow-counterclockwise"></i>
+      <% end %>
+    </div>
+  </div>
+  <div class="row g-4 d-flex justify-content-between align-items-center m-0">
+    <div class="col-auto">
+      <div class="form-check form-switch">
+        <%= f.label :each_month_separately, t(".each_month_separately"), class: "form-check-label text-decoration-none" %>
+        <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
+                                                 class: "form-check-input w-50px mr-2",
+                                                 onclick: "this.form.submit()"} %>
+      </div>
+    </div>
+
+    <div class="col-auto">
+      <label class="form-label invisible">invisible label</label>
+      <%= link_to t("value_resources.index.export"),
+                  value_resources_path(format: :xlsx, name: params[:name], group_id: params[:group_id],
+                                       status: params[:status],
+                                       start_month_year: params[:start_month_year],
+                                       end_month_year: params[:end_month_year],
+                                       each_month_separately: params[:each_month_separately]),
+                  class: "btn btn-secondary form-control" %>
+    </div>
   </div>
 <% end %>
