--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -83,6 +83,13 @@
           </li>
         <% end %>
 
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url lesson_learns_path %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-calendar text-white me-1"></i>
+            <%= link_to t(".lesson_learn"), lesson_learns_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
         <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(value_resources_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-bar-chart text-white me-1"></i>
