--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -85,7 +85,7 @@
 
         <li class="nav-item mb-2 menu-item pd <%= active_class_for_url lesson_learns_path %>">
           <div class="d-flex align-items-center">
-            <i class="bi bi-calendar text-white me-1"></i>
+            <i class="bi bi-journal-check text-white me-1"></i>
             <%= link_to t(".lesson_learn"), lesson_learns_path, class: "nav-link fw-bold" %>
           </div>
         </li>
@@ -94,6 +94,13 @@
           <div class="d-flex align-items-center">
             <i class="bi bi-bar-chart text-white me-1"></i>
             <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
+        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url statistics_resources_path %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".statistics_resources"), statistics_resources_path, class: "nav-link fw-bold" %>
           </div>
         </li>
       </ul>
