--- a/app/views/lesson_learns/index.html.erb
+++ b/app/views/lesson_learns/index.html.erb
@@ -1,4 +1,8 @@
 <% provide :title, t("layouts.sidebar.lesson_learn") %>
+<% content_for :javascript_file do %>
+  <%= javascript_include_tag "animate" %>
+<% end %>
+
 <h1 class="text-center mb-8"><%= t "layouts.sidebar.lesson_learn" %></h1>
 <%= render "search" %>
 <div class="table-responsive">
