--- a/app/views/lesson_learns/index.html.erb
+++ b/app/views/lesson_learns/index.html.erb
@@ -3,7 +3,7 @@
   <%= javascript_include_tag "animate" %>
 <% end %>
 
-<h1 class="text-center mb-8"><%= t "layouts.sidebar.lesson_learn" %></h1>
+<h1 class="text-center mb-8 fw-bold"><%= t "layouts.sidebar.lesson_learn" %></h1>
 <%= render "search" %>
 <div class="table-responsive">
   <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
