--- a/app/views/statistics_release_plans/index.html.erb
+++ b/app/views/statistics_release_plans/index.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t(".title") %>
 <div class="container">
-  <h1 class="text-center mb-8"><%= t ".title" %></h1>
+  <h1 class="text-center mb-8 fw-bold"><%= t ".title" %></h1>
   <%= render "search" %>
 
   <div class="card shadow mb-4">
