--- a/app/views/statistics_resources/_search.html.erb
+++ b/app/views/statistics_resources/_search.html.erb
@@ -36,7 +36,7 @@
     <% end %>
   </div>
 
-  <div class="col-auto">
+  <div class="col-auto ms-auto">
     <label class="form-label invisible min-w-50px">invisible</label>
     <%= link_to t("value_resources.index.export"),
                 statistics_resources_path,
