--- a/app/views/statistics_resources/index.html.erb
+++ b/app/views/statistics_resources/index.html.erb
@@ -3,7 +3,7 @@
   <%= javascript_include_tag "animate" %>
 <% end %>
 
-<h1 class="text-center mb-8"><%= t "layouts.sidebar.statistics_resources" %></h1>
+<h1 class="text-center mb-8 fw-bold"><%= t "layouts.sidebar.statistics_resources" %></h1>
 <%= render "search" %>
 <% if @pagy.pages > 1 %>
   <div class="d-flex justify-content-between align-items-center">
