--- a/app/views/health_items/_search_form.html.erb
+++ b/app/views/health_items/_search_form.html.erb
@@ -7,7 +7,7 @@
     <label class="form-label invisible">invisible label</label>
     <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
   </div>
-  <div class="col-auto">
+  <div class="col-auto w-100px m-0">
     <label class="form-label invisible">invisible label</label>
     <%= link_to health_items_path, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
