--- a/app/views/lesson_learns/_lesson_learn.html.erb
+++ b/app/views/lesson_learns/_lesson_learn.html.erb
@@ -11,14 +11,14 @@
   <td><%= lesson_learn.project_name %></td>
   <td><%= format_date lesson_learn.created_at %></td>
   <td class="text-center">
-    <%= link_to "#", class: "btn btn-primary btn-sm" do %>
+    <%= link_to lesson_learn, class: "btn btn-primary btn-sm", data: {turbo_frame: "modal"} do %>
       <i class="bi-eye-fill"></i>
     <% end %>
     <% if current_user.can_edit_delete_lesson_learn? lesson_learn %>
       <%= link_to "", class: "btn btn-success btn-sm" do %>
         <i class="bi-pencil-square"></i>
       <% end %>
-      <%= link_to "", data: { turbo_method: :delete, turbo_confirm: t("projects.you_sure?") }  do %>
+      <%= link_to lesson_learn, data: { turbo_method: :delete, turbo_confirm: t("lesson_learns.you_sure?") }  do %>
         <button type="button" class="btn btn-danger btn-sm">
           <i class="bi-trash-fill text-light"></i>
         </button>
