--- a/app/views/lesson_learns/show.html.erb
+++ b/app/views/lesson_learns/show.html.erb
@@ -5,8 +5,8 @@
       controller: "modals",
       action: "modals#close"
       } %>
-      <h1 class="mb-3 text-center fw-bold"><%= @release_plan.project_name %></h1>
-        <%= render "release_plan_detail" %>
+      <h1 class="mb-3 text-center fw-bold"><%= @lesson_learn.lesson_learn_category_name %></h1>
+        <%= render "lesson_learn_detail" %>
       <div class="d-flex justify-content-center align-items-center">
         <%= link_to t(".close"), "#", class: "btn btn-danger btn-md w-50 ", data: {
           controller: "modals",
