--- a/app/views/project_users/new.html.erb
+++ b/app/views/project_users/new.html.erb
@@ -1,5 +1,9 @@
 <%= turbo_frame_tag "modal" do %>
   <div class="modal-member">
+    <%= link_to "x", "#", class: "close_x square", data: {
+      controller: "modals",
+      action: "modals#close"
+    } %>
     <h1 class="modal-header mb-4 justify-content-center fw-bold"><%= t(".title") %></h1>
     <% content_for :submit do %>
       <% t(".submit") %>
