--- a/app/views/projects/_search_form.html.erb
+++ b/app/views/projects/_search_form.html.erb
@@ -23,7 +23,7 @@
     <label class="form-label invisible">invisible label</label>
     <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
   </div>
-  <div class="col-auto">
+  <div class="col-auto w-100px m-0 ms-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to projects_path, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
@@ -35,7 +35,7 @@
     <%= link_to t(".new_project"), new_project_path, class: "btn btn-primary form-control" %>
   </div>
 
-  <div class="col-auto">
+  <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to t("projects.index.export"),
                 projects_path(format: :xlsx,
