--- a/app/views/release_plans/_search_form.html.erb
+++ b/app/views/release_plans/_search_form.html.erb
@@ -19,18 +19,18 @@
     <label class="form-label invisible">invisible label</label>
     <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
   </div>
-  <div class="col-auto">
+  <div class="col-auto w-100px m-0">
     <label class="form-label invisible">invisible label</label>
     <%= link_to release_plans_path, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
     <% end %>
   </div>
-  <div class="col-auto">
+  <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
     <%= link_to t(".new_release_plan"), new_release_plan_path, class: "btn btn-primary form-control" %>
   </div>
   <div class="col-auto ms-auto">
     <label class="form-label invisible">invisible label</label>
-    <%= link_to t("breadcrumbs.statistical"), statistics_release_plans_path(year: Date.current.year), class: "btn btn-primary form-control" %>
+    <%= link_to t(".export"), statistics_release_plans_path(year: Date.current.year), class: "btn btn-secondary form-control" %>
   </div>
 <% end %>
