--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container w-50 d-flex justify-content-center">
   <%= turbo_frame_tag "modal" do %>
     <div class="modal-member">
+      <%= link_to "x", "#", class: "close_x square", data: {
+        controller: "modals",
+        action: "modals#close"
+      } %>
       <h1 class="mb-3 text-center fw-bold"><%= @report.project_name %></h1>
         <%= render "report_detail" %>
       <div class="d-flex justify-content-center align-items-center">
