--- a/app/views/value_resources/_search.html.erb
+++ b/app/views/value_resources/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4 position-relative" do |f| %>
-  <div class="row g-4">
+  <div class="row mt-4">
     <div class="col-auto">
       <%= f.label :name,  t("project.form.name"), class: "form-label" %>
       <%= f.text_field :name, value: params[:name], class: "form-control" %>
