--- a/app/views/dashboard/_search.html.erb
+++ b/app/views/dashboard/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: root_url, method: :get, class: "row g-4 pb-4" do |f| %>
-  <div class="col-auto w-175px">
+  <div class="col-auto">
     <%= f.label :project_id,  t("project.form.name"), class: "form-label" %>
     <%= f.select :project_id, list_project, {include_blank: true, selected: params[:project_id]}, {class: "form-select"} %>
   </div>
@@ -24,11 +24,11 @@
                      value: month_field_value(params[:end_month_year]), class: "form-control" %>
   </div>
 
-  <div class="col-auto w-150px">
+  <div class="col-auto w-125px">
     <label class="form-label invisible">invisible label</label>
     <%= f.submit t("projects.search_form.search"), name: nil, class: "btn btn-primary form-control"%>
   </div>
-  <div class="col-auto w-100px m-0">
+  <div class="col-auto w-80px m-0">
     <label class="form-label invisible overflow-hidden m-0">invisible label</label>
     <%= link_to root_url, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
