--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -31,6 +31,20 @@
           </div>
         </li>
 
+        <li class="nav-item offset-1 mb-2 show collapse pd <%= active_class_for_url(dashboard_resources_path) %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-pie-chart-fill text-white me-1"></i>
+            <%= link_to link_to t(".dashboard_resources"), dashboard_resources_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
+        <li class="nav-item offset-1 mb-2 menu-item pd <%= active_class_for_url statistics_resources_path %>">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".statistics_resources"), statistics_resources_path, class: "nav-link fw-bold" %>
+          </div>
+        </li>
+
         <li class="nav-item mb-2 menu-item pd <%= active_class_for_url(project_features_path) %>">
           <div class="d-flex align-items-center">
             <i class="bi bi-coin text-white me-1"></i>
@@ -94,13 +108,6 @@
           <div class="d-flex align-items-center">
             <i class="bi bi-bar-chart text-white me-1"></i>
             <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link fw-bold" %>
-          </div>
-        </li>
-
-        <li class="nav-item mb-2 menu-item pd <%= active_class_for_url statistics_resources_path %>">
-          <div class="d-flex align-items-center">
-            <i class="bi bi-bar-chart text-white me-1"></i>
-            <%= link_to t(".statistics_resources"), statistics_resources_path, class: "nav-link fw-bold" %>
           </div>
         </li>
       </ul>
