--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,24 +6,47 @@
 
 <%= render "search_form" %>
 <div class="table-responsive">
-  <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
-    <thead>
-      <tr>
-        <th scope="col" width="5%"><%= t ".stt" %></th>
-        <th scope="col"><%= t ".group" %></th>
-        <th scope="col"><%= t ".name" %></th>
-        <th scope="col"><%= t ".description" %></th>
-        <th scope="col"><%= t ".status" %></th>
-        <th scope="col"><%= t ".created_at" %></th>
-        <th scope="col"><%= t ".start_date" %></th>
-        <th scope="col"><%= t ".end_date" %></th>
-        <th scope="col"><%= t ".action" %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render @projects %>
-    </tbody>
-  </table>
+  <div class="card border-0 flex-fill w-100">
+    <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
+      <thead>
+        <tr>
+          <th scope="col" width="5%"><%= t ".stt" %></th>
+          <th scope="col"><%= t ".group" %></th>
+          <th scope="col"><%= t ".name" %></th>
+          <th scope="col"><%= t ".description" %></th>
+          <th scope="col"><%= t ".status" %></th>
+          <th scope="col"><%= t ".created_at" %></th>
+          <th scope="col"><%= t ".start_date" %></th>
+          <th scope="col"><%= t ".end_date" %></th>
+          <th scope="col"><%= t ".action" %></th>
+        </tr>
+      </thead>
+      <div class="card-header border-0 card-header-space-between">
+        <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t ".title" %></h2>
+
+        <!-- Dropdown -->
+        <div class="dropdown ms-4">
+          <a href="javascript: void(0);" class="dropdown-toggle no-arrow text-secondary" role="button"
+            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="bi bi-three-dots-vertical"></i>
+          </a>
+          <div class="dropdown-menu">
+            <%= link_to t(".export"),
+              projects_path(format: :xlsx,
+                            start_date: params[:start_date],
+                            end_date: params[:end_date],
+                            name: params[:name],
+                            group_id: params[:group_id],
+                            status: params[:status]),
+              class: "dropdown-item" %>
+          </div>
+        </div>
+      </div>
+      <tbody>
+        <%= render @projects %>
+      </tbody>
+    </table>
+  </div>
   <div class="card-footer">
     <div class="d-flex justify-content-between align-items-center">
       <!-- Pagination -->
