--- a/app/views/release_plans/index.html.erb
+++ b/app/views/release_plans/index.html.erb
@@ -6,22 +6,27 @@
 
 <%= render "search_form" %>
 <div class="table-responsive">
-  <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
-    <thead>
-      <tr>
-        <th width="5%"><%= t ".stt" %></th>
-        <th scope="col"><%= t ".project_name" %></th>
-        <th scope="col"><%= t ".day_release_plan" %></th>
-        <th scope="col"><%= t ".actual_release_date" %></th>
-        <th scope="col"><%= t ".description" %></th>
-        <th scope="col"><%= t ".status" %></th>
-        <th scope="col"><%= t ".action" %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render @release_plans %>
-    </tbody>
-  </table>
+  <div class="card border-0 flex-fill w-100">
+    <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
+      <thead>
+        <tr>
+          <th width="5%"><%= t ".stt" %></th>
+          <th scope="col"><%= t ".project_name" %></th>
+          <th scope="col"><%= t ".day_release_plan" %></th>
+          <th scope="col"><%= t ".actual_release_date" %></th>
+          <th scope="col"><%= t ".description" %></th>
+          <th scope="col"><%= t ".status" %></th>
+          <th scope="col"><%= t ".action" %></th>
+        </tr>
+      </thead>
+      <div class="card-header border-0 card-header-space-between">
+        <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t ".title" %></h2>
+      </div>
+      <tbody>
+        <%= render @release_plans %>
+      </tbody>
+    </table>
+  </div>
   <div class="card-footer">
     <div class="d-flex justify-content-between align-items-center">
       <!-- Pagination -->
