--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -10,7 +10,7 @@
     <!-- Card -->
     <div class="card border-0 flex-fill w-100">
       <div class="card-header border-0 card-header-space-between">
-        <h2 class="card-header-title h4 text-uppercase"><%= t(".resources") %></h2>
+        <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t ".resources" %></h2>
 
         <!-- Dropdown -->
         <div class="dropdown ms-4">
@@ -19,10 +19,7 @@
             <i class="bi bi-three-dots-vertical"></i>
           </a>
           <div class="dropdown-menu">
-            <%= link_to t(".export_report"), resources_path(format: :xlsx, name: params[:name], month_year: params[:month_year]), class: "dropdown-item" %>
-            <a href="javascript: void(0);" class="dropdown-item">
-              <%= t(".share")%>
-            </a>
+            <%= link_to t(".export"), resources_path(format: :xlsx, name: params[:name], month_year: params[:month_year]), class: "dropdown-item" %>
           </div>
         </div>
       </div>
