--- a/app/views/statistics_resources/index.html.erb
+++ b/app/views/statistics_resources/index.html.erb
@@ -3,41 +3,61 @@
   <%= javascript_include_tag "animate" %>
 <% end %>
 
-<h1 class="text-center mb-8 fw-bold"><%= t "layouts.sidebar.statistics_resources" %></h1>
 <%= render "search" %>
-<% if @pagy.pages > 1 %>
-  <div class="d-flex justify-content-between align-items-center">
-    <!-- Pagination -->
-    <%== pagy_info @pagy %>
-    <%== pagy_bootstrap_nav @pagy %>
-  </div>
-<% end %>
+
 <div class="overflow-scroll">
-  <table class="table table-striped table-hover table-bordered table-responsive position-relative value-resource-table">
-    <thead>
-      <tr>
-        <th class="w-200px"><%= t "projects.index.name" %></th>
-        <% month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                  month_field_value(params[:end_month_year])).each do |month_year| %>
-          <th class="w-125px"> <%= t "project_features.project_feature.month" %> <%= month_year.join("-") %> </th>
+  <div class="card mb-0 border-0 flex-fill w-100">
+    <table class="table table-striped table-hover table-bordered table-responsive position-relative value-resource-table">
+      <thead>
+        <tr>
+          <th class="w-200px"><%= t "projects.index.name" %></th>
+          <% month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                    month_field_value(params[:end_month_year])).each do |month_year| %>
+            <th class="w-125px"> <%= t "project_features.project_feature.month" %> <%= month_year.join("-") %> </th>
+          <% end %>
+          <th class="w-200px">
+            <%= t "value_resources.index.total_resource_year",
+                  month: month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                                month_field_value(params[:end_month_year])).length %>
+          </th>
+        </tr>
+      </thead>
+      <div class="card-header border-0 card-header-space-between">
+        <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t "layouts.sidebar.statistics_resources" %></h2>
+
+        <!-- Dropdown -->
+        <div class="dropdown ms-4">
+          <a href="javascript: void(0);" class="dropdown-toggle no-arrow text-secondary" role="button"
+            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="bi bi-three-dots-vertical"></i>
+          </a>
+          <div class="dropdown-menu">
+            <%= link_to t(".export"),
+                statistics_resources_path,
+                class: "dropdown-item" %>
+          </div>
+        </div>
+      </div>
+      <tbody>
+        <tr class="font-weight-bold">
+          <td><%= t "value_resources.index.total" %></td>
+          <%= resources_projects_html @projects,
+                                      start_month_field_value(params[:start_month_year]),
+                                      month_field_value(params[:end_month_year]) %>
+        </tr>
+        <% @project_pagys.each do |project| %>
+          <%= render partial: "statistics_resource", locals: {project: project} %>
         <% end %>
-        <th class="w-200px">
-          <%= t "value_resources.index.total_resource_year",
-                month: month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                              month_field_value(params[:end_month_year])).length %>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="font-weight-bold">
-        <td><%= t "value_resources.index.total" %></td>
-        <%= resources_projects_html @projects,
-                                    start_month_field_value(params[:start_month_year]),
-                                    month_field_value(params[:end_month_year]) %>
-      </tr>
-      <% @project_pagys.each do |project| %>
-        <%= render partial: "statistics_resource", locals: {project: project} %>
-      <% end %>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="card-footer">
+  <% if @pagy.pages > 1 %>
+    <div class="d-flex justify-content-between align-items-center">
+      <!-- Pagination -->
+      <%== pagy_info @pagy %>
+      <%== pagy_bootstrap_nav @pagy %>
+    </div>
+  <% end %>
 </div>
