--- a/app/views/value_resources/index.html.erb
+++ b/app/views/value_resources/index.html.erb
@@ -5,6 +5,86 @@
 <% end %>
 
 <%= render "value_resources/search" %>
+
+<div style="overflow-x: scroll">
+  <div class="card mb-0 border-0 flex-fill w-100">
+    <table class="table table-striped table-hover table-bordered table-responsive position-relative value-resource-table">
+      <thead>
+        <tr>
+          <th class="w-200px"></th>
+          <% month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                    month_field_value(params[:end_month_year])).each do |month_year| %>
+            <th colspan="3" class="w-400px"> <%= t "project_features.project_feature.month" %> <%= month_year.join("-") %> </th>
+          <% end %>
+          <th colspan="3" class="w-600px"><%= t ".total_year" %></th>
+        </tr>
+        <tr>
+          <th><%= t "projects.index.name" %></th>
+          <% month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                    month_field_value(params[:end_month_year])).each do |i| %>
+            <th><%= t ".value" %></th>
+            <th><%= t ".resource" %></th>
+            <th><%= t ".diff" %></th>
+          <% end %>
+          <th>
+            <%= t ".total_value_year",
+                  month: month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                                month_field_value(params[:end_month_year])).length %>
+          </th>
+          <th>
+            <%= t ".total_resource_year",
+                  month: month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                                month_field_value(params[:end_month_year])).length %>
+          </th>
+          <th>
+            <%= t ".total_diff_year",
+                  month: month_number_displayed(start_month_field_value(params[:start_month_year]),
+                                                month_field_value(params[:end_month_year])).length %>
+          </th>
+        </tr>
+      </thead>
+       <div class="card-header border-0 card-header-space-between">
+        <h2 class="card-header-title h4 text-uppercase fw-bold"><%= t ".title" %></h2>
+
+        <!-- Dropdown -->
+        <div class="dropdown ms-4">
+          <a href="javascript: void(0);" class="dropdown-toggle no-arrow text-secondary" role="button"
+            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="bi bi-three-dots-vertical"></i>
+          </a>
+          <div class="dropdown-menu">
+            <%= link_to t("value_resources.index.export"),
+                value_resources_path(format: :xlsx, name: params[:name], group_id: params[:group_id],
+                                      status: params[:status],
+                                      start_month_year: params[:start_month_year],
+                                      end_month_year: params[:end_month_year],
+                                      each_month_separately: params[:each_month_separately]),
+                class: "dropdown-item" %>
+          </div>
+        </div>
+      </div>
+      <%= form_with url: value_resources_path, method: :get, class: "mb-2" do |f| %>
+        <div class="form-check form-switch mx-3 mb-3">
+          <%= f.label :each_month_separately, t(".each_month_separately"), class: "form-check-label text-decoration-none" %>
+          <%= f.check_box :each_month_separately, {checked: boolean_params(:each_month_separately),
+                                                  class: "form-check-input w-50px mr-2",
+                                                  onclick: "this.form.submit()"} %>
+        </div>
+      <% end %>
+      <tbody>
+        <tr class="font-weight-bold">
+          <td><%= t ".total" %></td>
+          <%= value_resources_total_html @projects,
+                                        start_month_field_value(params[:start_month_year]),
+                                        month_field_value(params[:end_month_year]) %>
+        </tr>
+        <% @project_pagys.each do |project| %>
+          <%= render partial: "value_resources/value_resource", locals: { project: project} %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <div class="card-footer">
   <% if @pagy.pages > 1 %>
     <div class="d-flex justify-content-between align-items-center">
@@ -13,53 +93,4 @@
       <%== pagy_bootstrap_nav @pagy %>
     </div>
   <% end %>
-</div>
-<div style="overflow-x: scroll">
-  <table class="table table-striped table-hover table-bordered table-responsive position-relative value-resource-table">
-    <thead>
-      <tr>
-        <th class="w-200px"></th>
-        <% month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                  month_field_value(params[:end_month_year])).each do |month_year| %>
-          <th colspan="3" class="w-400px"> <%= t "project_features.project_feature.month" %> <%= month_year.join("-") %> </th>
-        <% end %>
-        <th colspan="3" class="w-600px"><%= t ".total_year" %></th>
-      </tr>
-      <tr>
-        <th><%= t "projects.index.name" %></th>
-        <% month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                  month_field_value(params[:end_month_year])).each do |i| %>
-          <th><%= t ".value" %></th>
-          <th><%= t ".resource" %></th>
-          <th><%= t ".diff" %></th>
-        <% end %>
-        <th>
-          <%= t ".total_value_year",
-                month: month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                              month_field_value(params[:end_month_year])).length %>
-        </th>
-        <th>
-          <%= t ".total_resource_year",
-                month: month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                              month_field_value(params[:end_month_year])).length %>
-        </th>
-        <th>
-          <%= t ".total_diff_year",
-                month: month_number_displayed(start_month_field_value(params[:start_month_year]),
-                                              month_field_value(params[:end_month_year])).length %>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="font-weight-bold">
-        <td><%= t ".total" %></td>
-        <%= value_resources_total_html @projects,
-                                       start_month_field_value(params[:start_month_year]),
-                                       month_field_value(params[:end_month_year]) %>
-      </tr>
-      <% @project_pagys.each do |project| %>
-        <%= render partial: "value_resources/value_resource", locals: { project: project} %>
-      <% end %>
-    </tbody>
-  </table>
 </div>
